[package]
name = "uuid-mc"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.38"
uuid = "1.2.2"
md5 = { version = "0.7.0", optional = true }
ureq = { version = "2.6.1", features = ["json"], optional = true }
serde = { version = "1.0.152", features = ["derive"], optional = true }

[features]
default = ["offline", "online"]
offline = ["md5"]
online = ["ureq", "serde", "uuid/serde"]
